==> carl-tud/RIOT/cpu/gd32v/periph/i2c.c <==
#include <assert.h>
#include <stdint.h>
#include <errno.h>
#include "cpu.h"
#include "irq.h"
#include "mutex.h"
#include "pm_layered.h"
#include "panic.h"
#include "periph/i2c.h"
#include "periph/gpio.h"
#include "periph_conf.h"
#include "ztimer.h"
#include "debug.h"
#define I2C_TIMEOUT_CYCLES      1000        /* clock cycles */
#define I2C_IRQ_PRIO            (1)
#define I2C_ERROR_FLAGS_USED    (I2C_STAT0_AERR_Msk | I2C_STAT0_LOSTARB_Msk | \
                                 I2C_STAT0_BERR_Msk)
#define I2C_ERROR_FLAGS_OTHER   (I2C_STAT0_OUERR_Msk | I2C_STAT0_PECERR_Msk | \
                                 I2C_STAT0_SMBTO_Msk | I2C_STAT0_SMBALT_Msk)
#define I2C_ERROR_FLAGS         (I2C_ERROR_FLAGS_USED | I2C_ERROR_FLAGS_OTHER)
#define I2C_INT_EV_ERR_FLAGS    (I2C_CTL1_EVIE_Msk | I2C_CTL1_ERRIE_Msk)
#define I2C_INT_ALL_FLAGS       (I2C_CTL1_BUFIE_Msk | I2C_INT_EV_ERR_FLAGS)

void i2c_init(i2c_t dev)
{
    assert(dev < I2C_NUMOF);

    assert(i2c_config[dev].dev != NULL);

    /* Configure pins in idle state as open drain outputs to keep the bus lines
     * in HIGH state */
    _deinit_pins(dev);

    periph_clk_en(APB1, i2c_config[dev].rcu_mask);

    /* enable set event interrupt handler and enable the event interrupt */
    clic_set_handler(i2c_config[dev].irqn, _irq_handler);
    clic_enable_interrupt(i2c_config[dev].irqn, CPU_DEFAULT_IRQ_PRIO);
    /* enable set error interrupt handler and enable the error interrupt */
    clic_set_handler(i2c_config[dev].irqn + 1, _irq_handler);
    clic_enable_interrupt(i2c_config[dev].irqn + 1, CPU_DEFAULT_IRQ_PRIO);

    _init(dev);

    _i2c_dev[dev].state = I2C_OK;
}

int i2c_read_bytes(i2c_t dev, uint16_t addr, void *data, size_t length,
                   uint8_t flags)
{
    assert(dev < I2C_NUMOF);
    assert(data);
    assert(length);

    DEBUG("i2c_read_bytes, dev=%d len=%d flags=%02x\n", dev, length, flags);

    I2C_Type *i2c = i2c_config[dev].dev;

    /* Repeated START of read operations is not supported. This is exactly the
     * case if the previous transfer was a read operation (I2C_STAT1_TR == 0)
     * and was not terminated by a STOP condition (I2C_STAT1_I2CBSY == 1) and
     * the START condition is to be used (I2C_NOSTART == 0).
     */
    if (((i2c->STAT1 & (I2C_STAT1_I2CBSY_Msk | I2C_STAT1_TR_Msk)) == I2C_STAT1_I2CBSY_Msk) &&
        !(flags & I2C_NOSTART)) {
        return -EOPNOTSUPP;
    }

    int res;

    _i2c_dev[dev].state = I2C_OK;

    /* set the ACK bit */
    i2c->CTL0 |= I2C_CTL0_ACKEN_Msk;
    /* clear the POAP bit to indicate that ACK bit controls the current byte */
    i2c->CTL0 &= ~I2C_CTL0_POAP_Msk;

    if (!(flags & I2C_NOSTOP)) {
        /* Since the I2C controller allows to receive up to two bytes before
         * the application has to react, receiving a single byte, two bytes
         * or more than two bytes needs a different handling for correct
         * reception if the reception is not to be continued (I2C_NOSTOP
         * is not set) */
        if (length == 1) {
            /* If a single byte is to be received clear the ACK bit before
             * any byte is received and keep the POAP bit cleared to indicate
             * that the ACK bit controls the ACK of the currecnt byte. */
            i2c->CTL0 &= ~I2C_CTL0_ACKEN_Msk;
        }
        else if (length == 2) {
            /* If exactly 2 bytes are to be received, keep the ACK bit set but
             * also set the POAP bit to indicate that the ACK bit controls the
             * next byte that is received in shift register. The ACK bit is then
             * cleared after the ADDSEND flag is cleared and thus the reception
             * of first byte has already been started. Thus an ACK is generated
             * for the first byte and a NACK for the second byte. */
            i2c->CTL0 |= I2C_CTL0_POAP_Msk;
        }
        /* In all other cases the ACK flag is kept set while the POAP flag
         * is kept cleared, so that the ACK bit always controls the byte
         * currently to be received in the shift register. To clear the ACK bit
         * before the last byte is received in the shift register, reading of
         * bytes from the DATA register is stopped when there are 3 bytes left
         * to receive until the BTC flag is set. The BTC flag then indicates
         * that the DATA register then contains the third last byte and the
         * shift register the second last byte. The ACK flag is then cleared
         * before reading of the bytes from the DATA register continues. */
    }

    /*  if I2C_NOSTART is not set, send START condition and ADDR */
    if (!(flags & I2C_NOSTART)) {
        res = _i2c_start_cmd(dev);
        if (res != 0) {
            _i2c_stop_cmd_and_wait(dev);
            return res;
        }

        /* address handling */
        if (flags & I2C_ADDR10) {
            /* prepare 10 bit address bytes */
            uint8_t addr10[2];
            addr10[0] = 0xf0 | (addr & 0x0300) >> 7 | I2C_READ;
            addr10[1] = addr & 0xff;
            /* send ADDR without read flag */
            res = _i2c_addr_cmd(dev, addr10, 2);
        }
        else {
            /* send ADDR without read flag */
            uint8_t addr7 = addr << 1 | I2C_READ;
            res = _i2c_addr_cmd(dev, &addr7, 1);
        }
        if (res != 0) {
            _i2c_stop_cmd_and_wait(dev);
            return res;
        }
    }

    /* read STAT0 followed by reading STAT1 to clear the ADDSEND flag */
    i2c->STAT0;
    i2c->STAT1;

    /* read data */
    uint8_t *buffer = (uint8_t*)data;

    for (size_t i = 0; i < length; i++) {
        if (!(flags & I2C_NOSTOP)) {
            /* if the reception is not to be continued (I2C_NOSTOP is not set) */
            if (i == 0 && (length == 2)) {
                /* The shift register already receives the first byte after
                 * the ADDSEND flag has been cleared. Since the POAP bit is
                 * set in the case that exactly two bytes are to be received,
                 * the change of the ACK bit during the reception of a byte
                 * does not affect the generated ACK of the byte currently
                 * received, but of the byte to be received next. Since the
                 * ACK bit and the POAP bit were set in this case, an ACK
                 * is generated for the first byte. Clearing the ACK bit here
                 * then generates a NACK for the next (last) byte. */
                i2c->CTL0 &= ~I2C_CTL0_ACKEN_Msk;
            }
            else if (i == (length - 3)) {
                /* To clear the ACK flag before the last byte is received
                 * in the shift register, reading of bytes from the DATA
                 * register is stopped when there are 3 bytes left to
                 * receive until the BTC flag is set. The BTC flag is then
                 * set when the third last received byte is in DATA register
                 * and the second last byte is in shift register. */
                res = _i2c_wait_rbne_btc(dev);
                if (res != 0) {
                    _i2c_stop_cmd_and_wait(dev);
                    return res;
                }
                /* The ACK flag is then cleared before reading of the bytes
                 * from the DATA register continues to generate an NACK
                 * for the last byte. */
                i2c->CTL0 &= ~I2C_CTL0_ACKEN_Msk;
            }
        }
        res = _i2c_read_cmd(dev, buffer + i);
        if (res != 0) {
            _i2c_stop_cmd_and_wait(dev);
            return res;
        }
    }

    if (!(flags & I2C_NOSTOP)) {
        /* If the transfer is not to be continued (I2C_NOSTOP is not set), set
         * the STOP bit and wait a short time until the I2CBSY bit is cleared. */
        return _i2c_stop_cmd_and_wait(dev);
    }

    return 0;
}

int i2c_write_bytes(i2c_t dev, uint16_t addr, const void *data,
                    size_t length, uint8_t flags)
{
    assert(dev < I2C_NUMOF);
    assert(data);
    assert(length);

    DEBUG("i2c_write_bytes, dev=%d len=%d flags=%02x\n", dev, length, flags);

    int res;

    _i2c_dev[dev].state = I2C_OK;

    /*  if I2C_NOSTART is not set, send START condition and ADDR */
    if (!(flags & I2C_NOSTART)) {
        res = _i2c_start_cmd(dev);
        if (res != 0) {
            _i2c_stop_cmd_and_wait(dev);
            return res;
        }

        /* address handling */
        if (flags & I2C_ADDR10) {
            /* prepare 10 bit address bytes */
            uint8_t addr10[2];
            addr10[0] = 0xf0 | (addr & 0x0300) >> 7;
            addr10[1] = addr & 0xff;
            /* send ADDR without read flag */
            res = _i2c_addr_cmd(dev, addr10, 2);
        }
        else {
            /* send ADDR without read flag */
            uint8_t addr7 = addr << 1;
            res = _i2c_addr_cmd(dev, &addr7, 1);
        }
        if (res != 0) {
            _i2c_stop_cmd_and_wait(dev);
            return res;
        }
    }

    /* read STAT0 followed by reading STAT1 to clear the ADDSEND flag */
    i2c_config[dev].dev->STAT0;
    i2c_config[dev].dev->STAT1;

    /* send data */
    uint8_t *buffer = (uint8_t*)data;

    for (size_t i = 0; i < length; i++) {
        res = _i2c_write_cmd(dev, buffer[i]);
        if (res != 0) {
            _i2c_stop_cmd_and_wait(dev);
            return res;
        }
    }

    if (!(flags & I2C_NOSTOP)) {
        /* If the transfer is not to be continued (I2C_NOSTOP is not set), set
         * the STOP bit and wait a short time until the I2CBSY bit is cleared. */
        return _i2c_stop_cmd_and_wait(dev);
    }

    return 0;
}
